# yt-backend

./: .gitignore
server/: .env.example  README.md  pyproject.toml
server/src/: main.py
server/src/core/: config.py  mongo_client.py
server/src/llm/: azure_openai.py  base.py  google.py
server/src/prompts/: chat_combine_default.txt
server/src/routers/: answer.py
server/src/schemas/: answer.py
server/src/services/: naive_rag.py
server/src/utils/: embeddings.py  helpers.py
server/src/vectorstore/: base.py  mongo_vectordb.py  qdrant.py
