[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "motor>=3.7.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.1",
    "structlog==24.1.0",
]
